--- a/src/boatprototype/Lockers.form
+++ b/src/boatprototype/Lockers.form
@@ -127,7 +127,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <Component id="memberId" min="-2" max="-2" attributes="0"/>
+                              <Component id="nameLbl" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
@@ -148,7 +148,7 @@
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <Component id="lockerNameTxt" alignment="0" max="32767" attributes="0"/>
-                      <Component id="memberIDTxt" alignment="0" max="32767" attributes="0"/>
+                      <Component id="nameTxt" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -158,8 +158,8 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="memberId" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="memberIDTxt" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="nameLbl" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="nameTxt" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -178,9 +178,9 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="memberId">
+        <Component class="javax.swing.JLabel" name="nameLbl">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Member ID"/>
+            <Property name="text" type="java.lang.String" value="Name"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="passwordGeneratorBtn">
@@ -212,7 +212,10 @@
             <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="passwordTxtPropertyChange"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JTextField" name="memberIDTxt">
+        <Component class="javax.swing.JTextField" name="nameTxt">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nameTxtActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
