--- a/src/boatprototype/Locker_Admin.form
+++ b/src/boatprototype/Locker_Admin.form
@@ -202,7 +202,7 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="3" rowCount="28">
-                <Column editable="false" title="Locker Name" type="java.lang.String"/>
+                <Column editable="false" title="Select a locker" type="java.lang.String"/>
                 <Column editable="false" title="Available" type="java.lang.String"/>
                 <Column editable="false" title="Name" type="java.lang.Object"/>
               </Table>
