--- a/src/boatprototype/Lockers.form
+++ b/src/boatprototype/Lockers.form
@@ -197,6 +197,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="lockerNameTxt">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="lockerNameTxtActionPerformed"/>
           </Events>
@@ -207,6 +210,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="passwordTxt">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="A-Z    a-z    0-9    !?@#*&amp;"/>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="passwordTxtActionPerformed"/>
             <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="passwordTxtPropertyChange"/>
@@ -238,7 +244,7 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="2" rowCount="16">
-                <Column editable="false" title="Locker Name" type="java.lang.String"/>
+                <Column editable="false" title="Pick available locker" type="java.lang.String"/>
                 <Column editable="false" title="Available" type="java.lang.String"/>
               </Table>
             </Property>
